Change "OS X" to "macOS". Change the glyphs to use the viewer. Fix the alignment of macOS elements. Make the downloads button white.

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -345,8 +345,13 @@
   }
 }
 
+.mac .row,
 .other .row {
   justify-content: space-between;
+  margin: 0 20px;
+}
+
+.other .row {
   margin: 30px 20px 20px;
 }
 
